@@ -1,6 +1,7 @@
 *** WooCommerce Payments Changelog ***
 
 = 2.8.2 - 2021-xx-xx =
+* Fix - If account is disconnected or not set up do not display onboarding task and UPE inbox note.
 * Fix - Fix for the site acting as disconnected after the account cache expires.
 
 = 2.8.1 - 2021-08-04 =
